fix: fixed menu visible behind mermaid

--- a/assets/styles/components/markdown-body.styl
+++ b/assets/styles/components/markdown-body.styl
@@ -20,12 +20,18 @@
   > pre.mermaid[data-processed]
     max-width 100%
     text-align center
+    position relative
+    z-index 20
+    background linear-gradient(to bottom, transparent, var(--bg) 5% 95%, transparent)
+    border-radius 1rem
 
   > table
     max-width 100%
     margin-top $gap-normal
     margin-bottom $gap-normal
     border-collapse collapse
+    position relative
+    z-index 20
 
     th
     td
